# Nmap Changelog ($Id$); -*-text-*-

o [Zenmap] New translation: Russian (contributed by Alexander Khodyrev).

o Added the ssl-cert.nse script, which retrieves and prints the server
  SSL certificate. [David]

o [Ncat] The --idle-timeout option now exits when *both* stdin and the
  socket have been idle for the given time. Previously it would exit
  when *either* of them had been idle, meaning that the program would
  quit contrary to your expectation when downloading a large file
  without sending anything, for example. [David]

o [Ncat] Ncat now always prefixes its own output messages with "Ncat: "
  or "NCAT DEBUG: " to make it clear that they are not coming from the
  remote host. This only matters when output goes to a terminal, where
  the standard output and standard error streams are mixed. [David]

o Added the x11-access.nse script that checks if access to an X11
  server is allowed (as with "xhost +" for example). The script was
  written by jlanthea.

o Added explicit casts to (int)(unsigned char) for arguments to ctype function
  calls in nmap, ncat and nbase.  Thanks to Solar Designer for pointing out
  the need and fix for this. [Josh]

o [Ncat, Ndiff] The exit codes of these programs now reflect whether
  they succeeeded. For Ncat, 0 means the connection was successful, 1
  indicates a network error, and 2 indicates any other error. For
  Ndiff, 0 means the scans were equal, 1 means they were different,
  and 2 indicates a runtime error. [David]

o [Ncat] Now Ncat supports wildcard SSL certificates too.Wildcard character(*) can
  be in commonname field or in DNS field of Subject Alternative Name(SAN)
  Extension of SSL certificate.
  Wildcard Matching Rules:
  -'*' should be only on the leftmost component of FQDN.(*.example.com but not www.*.com or www.example*.com).
  -The leftmost component should contain only '*' and it should be followed by '.'(*.example.com but not *w.example.com or w*.example.com).